<resources>
    <string name="app_name">Foody</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="continue_text">Continue</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_no">Phone No.</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="address">Address</string>
    <string name="type_your_address">Type your address</string>
    <string name="house_no">House No.</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="type_the_city_you_live_in">Type the city you live in</string>
    <string name="city">City</string>
    <string name="sign_in_subtitle">Find your best ever meal</string>
    <string name="sign_up_subtitle">Register and order immediately</string>
    <string name="registration_success">Registration Success!</string>
    <string name="feeling_hungry">Feeling hungry?\nOrder some food now!</string>
    <string name="find_foods">Find Foods</string>
    <string name="title_home">Home</string>
    <string name="title_order">Orders</string>
    <string name="title_profiles">Profile</string>
    <string name="your_favorite_food_here">Your favorite food here</string>
    <string name="new_taste">New Taste</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="food_price">IDR %s</string>
    <string name="ouch_hungry">Ouch! Hungry</string>
    <string name="account">Account</string>
    <string name="empty_order_subtitle">Seems like you have not\nordered any food yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="total_price">Total Price:</string>
    <string name="order_now">Order Now</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="subtotal_price">Subtotal Price</string>
    <string name="driver">Driver</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="name">Name</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="order_success">Order Success</string>
    <string name="order_success_subtitle">Sit tight at home while we\nprepare your foods</string>
    <string name="order_other_foods">Order Other Foods</string>
    <string name="view_my_order">View My Order</string>
    <string name="past_order">Past Order</string>
    <string name="in_progress">In Progress</string>
    <string name="order_qty_price">%d items • IDR %s</string>
    <string name="payment_qty">%d items</string>
</resources>