<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.auth.signup.SignUpAddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phone_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Secondary"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/phone_tv" />

        <TextView
            android:id="@+id/address_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Secondary"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_address"
            app:layout_constraintTop_toBottomOf="@+id/address_tv" />

        <TextView
            android:id="@+id/house_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_no"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/address_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/house_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Secondary"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_house_number"
            app:layout_constraintTop_toBottomOf="@+id/house_tv" />

        <TextView
            android:id="@+id/city_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/house_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_et"
            style="@style/TextView.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_the_city_you_live_in"
            app:layout_constraintTop_toBottomOf="@+id/city_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up_now"
            app:layout_constraintTop_toBottomOf="@+id/city_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>