<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.auth.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sign_up_profile_picture_iv"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/ic_picture_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_profile_picture_iv"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Secondary"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_full_name"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        <TextView
            android:id="@+id/email_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Secondary"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_email_address"
            app:layout_constraintTop_toBottomOf="@+id/email_tv" />

        <TextView
            android:id="@+id/pass_tv"
            style="@style/TextView.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_et"
            style="@style/TextView.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_rectangle_outline_black"
            android:hint="@string/type_your_password"
            app:layout_constraintTop_toBottomOf="@+id/pass_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/continue_text"
            app:layout_constraintTop_toBottomOf="@+id/pass_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>