<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.payment.PaymentSuccessFragment">

    <ImageView
        android:id="@+id/order_success_image"
        android:layout_width="240dp"
        android:layout_height="220dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/ic_success_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_success_title"
        style="@style/TextView.Primary.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_success"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/order_success_image"
        app:layout_constraintStart_toStartOf="@+id/order_success_image"
        app:layout_constraintTop_toBottomOf="@+id/order_success_image" />

    <TextView
        android:id="@+id/order_success_subtitle"
        style="@style/TextView.Secondary.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/order_success_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/order_success_title"
        app:layout_constraintStart_toStartOf="@+id/order_success_title"
        app:layout_constraintTop_toBottomOf="@+id/order_success_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_other_food_btn"
        style="@style/Button.Primary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/order_other_foods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_success_subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_order_btn"
        style="@style/Button.Secondary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/view_my_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_other_food_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>