<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.SignUpSuccessFragment">

    <ImageView
        android:id="@+id/success_sign_up_iv"
        android:layout_width="220dp"
        android:layout_height="320dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_signup_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/success_sign_up_title"
        style="@style/TextView.Primary.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_success"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/success_sign_up_iv" />

    <TextView
        android:id="@+id/success_sign_up_subtitle"
        style="@style/TextView.Secondary.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/feeling_hungry"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/success_sign_up_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_food_btn"
        style="@style/Button.Primary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/find_foods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_sign_up_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>